--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,11 @@
             "label": "build",
             "type": "shell",
             "command": "gem build target-menu.gemspec"
+        },
+        {
+            "label": "install gem",
+            "type": "shell",
+            "command": "gem install *.gem"
         }
     ]
 }
